--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "start1": "react-scripts start",
-    "build": "react-scripts build && gulp && move product/build product/public",
+    "build": "rimraf ./product && react-scripts build && gulp && move product/build product/public",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -36,7 +36,8 @@
     "gulp": "^4.0.2",
     "gulp-rename": "^2.0.0",
     "gulp-sourcemaps": "^3.0.0",
-    "gulp-typescript": "^6.0.0-alpha.1"
+    "gulp-typescript": "^6.0.0-alpha.1",
+    "rimraf": "^5.0.1"
   },
   "eslintConfig": {
     "extends": [
